# app/api/index.go
@@ -8,7 +8,6 @@ import (
 	"github.com/gogf/gf/frame/g"
 	"github.com/gogf/gf/net/ghttp"
 	"net/http"
-	"strconv"
 )
 
 var Index = indexApi{}
@@ -16,14 +15,20 @@ var Index = indexApi{}
 type indexApi struct{}
 
 func (a *indexApi) Test(r *ghttp.Request) {
-	baseInfo, _ := dao.FaBscBaseInfo.Where("theKey=?", model.BaseReadKey).One()
-	num, err := strconv.Atoi(baseInfo.TheValue)
-	if err != nil {
-		num = 1
-		g.Log().Debug("Service ListenTask strconv Err:", err)
-	}
-	service.NewGame.ReadBlockLog(int64(num))
+	//baseInfo, _ := dao.FaBscBaseInfo.Where("theKey=?", model.BaseReadKey).One()
+	//num, err := strconv.Atoi(baseInfo.TheValue)
+	//if err != nil {
+	//	num = 1
+	//	g.Log().Debug("Service ListenTask strconv Err:", err)
+	//}
+	//service.NewGame.ReadBlockLog(int64(num))
+
 	//service.ListenTask.DealGameStatus(r.Context())
+
+	//n2 := service.GetNo()
+	//n3 := service.GetBase(n2)
+	//n1 := service.GetPercent()
+	//g.Log().Debug(n2, n3, n1)
 	_ = r.Response.WriteJsonExit(service.JsonResponse{Code: http.StatusOK, Message: common.SuccessMsg})
 }
 
@@ -44,11 +49,19 @@ func (a *indexApi) BaseInfo(r *ghttp.Request) {
 // @tags    系统信息
 // @produce json
 // @router  /api/index/game-info   [GET]
-// @success 200 {object} model.FaBscGameInfo "执行结果"
+// @success 200 {object} model.GameIndexInfo "执行结果"
 func (a *indexApi) GameInfo(r *ghttp.Request) {
+	data := model.GameIndexInfo{}
 	res, err := dao.FaBscGameInfo.Where("status=1").Order("round desc").One()
 	if err != nil {
+		g.Log().Debug("Api Index GameInfo GameInfo One Err:", err)
 		_ = r.Response.WriteJsonExit(service.JsonResponse{Code: http.StatusBadRequest, Message: err.Error()})
 	}
-	_ = r.Response.WriteJsonExit(service.JsonResponse{Code: http.StatusOK, Data: res, Message: common.SuccessMsg})
+	data.FaBscGameInfo = res
+	data.TotalInvest, err = dao.FaBscUserGame.Where("game_round=?", res.Round).Sum(dao.FaBscUserGame.Columns.InvestNum)
+	if err != nil {
+		g.Log().Debug("Api Index GameInfo UserGame InvestNum Err:", err)
+		_ = r.Response.WriteJsonExit(service.JsonResponse{Code: http.StatusBadRequest, Message: err.Error()})
+	}
+	_ = r.Response.WriteJsonExit(service.JsonResponse{Code: http.StatusOK, Data: data, Message: common.SuccessMsg})
 }
