# app/model/fa_bsc_game_info.go
@@ -12,3 +12,7 @@ import (
 type FaBscGameInfo internal.FaBscGameInfo
 
 // Fill with you ideas below.
+type GameIndexInfo struct {
+	*FaBscGameInfo
+	TotalInvest float64 //总投资
+}
